Fix tab dragging to external display

Convert the native event location to the target's host if it's different
from the source's host.

BUG=714578

Change-Id: I09d64fe043c9d872331dd35babd41ca62280f9c7